--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ requests==2.31.0
 tqdm==4.66.2
 fastapi==0.110.0
 uvicorn==0.27.1
-pydantic==2.6.3 
+pydantic==2.6.3
+jinja2==3.1.3
+aiohttp==3.9.3
+python-multipart==0.0.9 
